kubernetes/apps/networking/envoy-gateway/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpsredirect
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: http
    - name: external
      namespace: networking
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
